[package]
name = "maths_exp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
hf-hub = "0.3.0"
accelerate-src = { version = "0.3.2", optional = true }
anyhow = "1.0.79"
candle = { git = "https://github.com/huggingface/candle", package = "candle-core" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
uuid = "1.8.0"
tokio = { version = "1.36.0", features = ["full"] }
nalgebra = "0.32.4"
csv = "1.1.6"
rand = "0.8.5"


[features]
default = []
accelerate = [
  "candle/accelerate",
  "candle-nn/accelerate",
  "candle-transformers/accelerate",
]
metal = ["candle/metal", "candle-nn/metal"]
